--- a/projects-grid-cards.html
+++ b/projects-grid-cards.html
@@ -33,37 +33,37 @@
         <section class="portfolio-block projects-cards">
             <div class="container">
                 <div class="heading">
-                    <h2>Recent Work</h2>
+                    <h2><strong>seminaries</strong></h2>
                 </div>
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image1.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/Ericsson.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
+                                <h6><a href="#"><br>Inleiding tot 5G<br></a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image2.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/public-cloud-providers.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
+                                <h6><a href="#">Gluo</a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image3.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/facebook%20en%20ik.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
+                                <h6><a href="#">Facebook en ik<br></a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image4.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/4-Common-Mistakes-In-Performance-Testing.png" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
+                                <h6><a href="#">Quality@Speed<br></a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
@@ -71,8 +71,8 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image5.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Lorem Ipsum</a></h6>
-                                <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                <h6><a href="#">Eurofins<br></a></h6>
+                                <p class="text-muted card-text">Software testing</p>
                             </div>
                         </div>
                     </div>
