--- a/project-page.html
+++ b/project-page.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Project Page - Casper Naudts</title>
     <meta name="theme-color" content="rgb(255,138,0)">
-    <link rel="icon" type="image/jpeg" sizes="undefinedxundefined" href="assets/img/profile%20picture.jpg">
-    <link rel="icon" type="image/jpeg" sizes="undefinedxundefined" href="assets/img/profile%20picture.jpg">
+    <meta name="twitter:title" content="I-Talent portfolio">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="../assets/img/avatars/profile%20picture.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1360x1360" href="assets/img/avatars/profile%20picture.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1360x1360" href="assets/img/avatars/profile%20picture.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1360x1360" href="assets/img/avatars/profile%20picture.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1360x1360" href="assets/img/avatars/profile%20picture.jpg">
+    <link rel="icon" type="image/jpeg" sizes="1360x1360" href="assets/img/avatars/profile%20picture.jpg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
@@ -22,8 +29,8 @@
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-grid-cards.html">Seminaries</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="projects-grid-cards.html">Extra's</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="Seminars.html">Seminaries</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="Seminars.html">Extra's</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
                 </ul>
             </div>
@@ -66,7 +73,7 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
+    <footer class="d-md-flex page-footer">
         <div class="container">
             <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
             <div class="social-icons"><a href="https://www.linkedin.com/in/casper-naudts-25a747148/"><i class="icon ion-social-linkedin"></i></a></div>
