--- a/Seminars.html
+++ b/Seminars.html
@@ -18,22 +18,25 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">Casper Naudts</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
+        <div class="container"><a class="navbar-brand logo" href="../index.html">Casper Naudts</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="Seminars.html">Seminaries</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="Seminars.html">Extra's</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <main class="page projects-page">
@@ -68,25 +71,25 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/seminars/4-Common-Mistakes-In-Performance-Testing.png" alt="Card Image"></a>
+                        <div class="card border-0"><a href="Seminars/quality@speed.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/Preformance%20testing.png" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Quality@Speed<br></a></h6>
+                                <h6><a href="Seminars/quality@speed.html">Quality@Speed<br></a></h6>
                                 <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/nature/image5.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="Seminars/secwise.html"><img class="card-img-top scale-on-hover" src="assets/img/Cloud_Security_495781054-700.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#">Eurofins<br></a></h6>
-                                <p class="text-muted card-text">Software testing</p>
+                                <h6><a href="Seminars/secwise.html">Secwise<br></a></h6>
+                                <p class="text-muted card-text">Cloud Security<br></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="#"><img class="card-img-top scale-on-hover" src="assets/img/seminars/Untitled-design.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="Seminars/devSecOps.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/DevSecOps.jpg" alt="Card Image"></a>
                             <div class="card-body">
-                                <h6><a href="#"><strong>Devsecops</strong></a></h6>
+                                <h6><a href="Seminars/devSecOps.html"><strong>Devsecops</strong></a></h6>
                                 <p class="text-muted card-text">Secure Software Development in a Devops world.<br></p>
                             </div>
                         </div>
@@ -102,7 +105,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
