--- a/Seminars/secwise.html
+++ b/Seminars/secwise.html
@@ -39,8 +39,8 @@
         </div>
         </div>
     </nav>
-    <main style="padding: 88px 0px 0px;">
-        <section style="padding: 100px 0px;"></section>
+    <main class="page projects-page">
+        <section class="portfolio-block projects-cards"></section>
     </main>
     <footer class="d-md-flex page-footer">
         <div class="container">
