--- a/cv.html
+++ b/cv.html
@@ -18,22 +18,25 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
 </head>
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="#">Casper Naudts</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse"
-                id="navbarNav">
+        <div class="container"><a class="navbar-brand logo" href="../index.html">Casper Naudts</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="Seminars.html">Seminaries</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="Seminars.html">Extra's</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="cv.html">CV</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <main class="page cv-page">
@@ -41,7 +44,9 @@
             <div class="container">
                 <div class="avatar" style="background-image: url(&quot;assets/img/avatars/Layer%2021.png&quot;);"></div>
                 <div class="about-me">
-                    <p>Hoi! Ik ben&nbsp;<strong>Casper Naudts</strong>. Ik ben een student toegepaste informatica &nbsp;aan Hogeschool PXL en heb een enorme passie voor nieuwe en inovatieve technologieën.<br></p>
+                    <p>Geëngageerde mede-oprichter van edu-tech met een bewezen kennis van werken in de computernetwerk industrie. Bekwaam in het spreken in het openbaar, virtualisatie, Cloud, Office 365 en team management.<br><br>Wat ik leuk vind aan de
+                        combinatie van studeren en runnen van een bedrijf is dat er een zeer kleine tijdspanne is tussen het leren van technologie en het toepassen ervan in de echte wereld. Dat maakt het gemakkelijker om het nut te zien van wat er op
+                        school wordt onderwezen.<br><br>Een recente vaardigheid die ik ontdekte is dat ik graag voor een groep mensen spreek om mijn kennis en expertise te delen. Dit geeft me nieuwe inzichten in de behoeften van IT-gebruikers.<br></p>
                 </div>
             </div>
         </section>
@@ -54,32 +59,13 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Web Developer</h3>
-                                <h4 class="organization">Amazing Co.</h4>
-                            </div>
-                            <div class="col-md-6"><span class="period">10/2013 - 04/2015</span></div>
-                        </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
-                    </div>
-                    <div class="item">
-                        <div class="row">
-                            <div class="col-6">
-                                <h3>Front End Developer</h3>
-                                <h4 class="organization">Innovative Org.</h4>
-                            </div>
-                            <div class="col-md-6"><span class="period">05/2015 - 12/2017</span></div>
-                        </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
-                    </div>
-                    <div class="item">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <h3>Web Developer</h3>
-                                <h4 class="organization">Special Inc.</h4>
+                                <h3>Zaakvoerder Edu-Tech</h3>
+                                <h4 class="organization">Edu-Tech BVBA</h4>
                             </div>
                             <div class="col-md-6"><span class="period">12/2017 - Present</span></div>
                         </div>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
+                        <p class="text-muted">Als zaakvoerder en mede oprichter van Edu-Tech maak ik dagelijks het verschil in de wereld van het onderweis en kleine KMO's. We leveren ondersteunende services aan om de integratie van moderne en nieuwe technologien vlot in de
+                            prakteik te brengen.</p>
                     </div>
                 </div>
                 <div class="education group">
@@ -89,20 +75,31 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>High School</h3>
-                                <h4 class="organization">Albert Einstein School</h4>
+                                <h3>Elector mechanica</h3>
+                                <h4 class="organization">Vrij technies instituut - Leuven</h4>
                             </div>
-                            <div class="col-6"><span class="period">09/2005 - 05/2010</span></div>
+                            <div class="col-md-6"><span class="period">09/2013 - 06/2015</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                     <div class="item">
                         <div class="row">
                             <div class="col-md-6">
-                                <h3>Applied Physics</h3>
-                                <h4 class="organization">Stephen Hawking College</h4>
+                                <h3>Informatica beheer</h3>
+                                <h4 class="organization">Miniemen instituut - Leuven</h4>
                             </div>
-                            <div class="col-md-6"><span class="period">09/2010 - 06/2015</span></div>
+                            <div class="col-6"><span class="period">09/2015 - 06/2017</span></div>
+                        </div>
+                        <p class="text-muted">Tijdens deze opleiding zette ik mijn eerste grote stappen in mijn kennis van de IT-wereld. Zo ging ik van ongestructureerd programeren naar betere en nettere programeer stijl. Netwerken en cloud hebben sinds deze opleiding ook
+                            geen geheimen meer voor mij.</p>
+                    </div>
+                    <div class="item">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h3>Toegepaste informatica</h3>
+                                <h4 class="organization">Hogeschool PXL - Hasselt</h4>
+                            </div>
+                            <div class="col-md-6"><span class="period">09/2017 - pressent</span></div>
                         </div>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
@@ -112,11 +109,19 @@
                         <div class="col-md-6">
                             <div class="skills portfolio-info-card">
                                 <h2>Skills</h2>
-                                <h3>HTML</h3>
+                                <h3>Azure</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"><span class="sr-only">80%</span></div>
+                                </div>
+                                <h3>AWS</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"><span class="sr-only">60%</span></div>
+                                </div>
+                                <h3>Docker</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"><span class="sr-only">100%</span></div>
                                 </div>
-                                <h3>PHP</h3>
+                                <h3>K8S</h3>
                                 <div class="progress">
                                     <div class="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"><span class="sr-only">90%</span></div>
                                 </div>
@@ -131,11 +136,11 @@
                                 <h2>Contact Info</h2>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-android-calendar icon"></i></div>
-                                    <div class="col-9"><span>10/10/1990</span></div>
+                                    <div class="col-9"><span>23/07/1999</span></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-person icon"></i></div>
-                                    <div class="col-9"><span>John Smith</span></div>
+                                    <div class="col-9"><span>Casper Naudts</span></div>
                                 </div>
                                 <div class="row">
                                     <div class="col-1"><i class="icon ion-ios-telephone icon"></i></div>
@@ -165,7 +170,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/script.min.js"></script>
 </body>
