--- a/Seminars/facebook&ik.html
+++ b/Seminars/facebook&ik.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <div>
-        <div class="header-dark" style="background-image: url(&quot;../assets/img/158292227683309219.jpg&quot;);filter: blur(0px);">
+        <div class="header-dark" style="background-image: url(&quot;../assets/img/seminars/158292227683309219.jpg&quot;);filter: blur(0px);">
             <nav class="navbar navbar-dark navbar-expand-lg navigation-clean-search">
                 <div class="container"><a class="navbar-brand" href="#">Company Name</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse"
@@ -68,6 +68,9 @@
                             </div>
                             <div>
                                 <p>Zo vertelde hij over hun advertenties experiment. Door zeer gerichte advertenties over een bepaalde groente te maken sloegen ze er in om in de getargete steden de verkoop van de groenten tot wel te ver drie voudigen.</p>
+                            </div>
+                            <div>
+                                <p>Ik vond dit een zeer leuk seminarie maar doordat ik de reportage al gezien had was de informaatie niet echt nieuw voor mij.</p>
                             </div>
                         </div>
                     </div>
