--- a/Seminars.html
+++ b/Seminars.html
@@ -50,7 +50,7 @@
                         <div class="card border-0"><a href="Seminars/5g.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/Ericsson.jpg" alt="Card Image"></a>
                             <div class="card-body">
                                 <h6><a href="Seminars/5g.html"><br>Inleiding tot 5G<br></a></h6>
-                                <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                <p class="text-muted card-text">The power and history of 5G</p>
                             </div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         <div class="card border-0"><a href="Seminars/cloud.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/public-cloud-providers.jpg" alt="Card Image"></a>
                             <div class="card-body">
                                 <h6><a href="Seminars/cloud.html">Gluo</a></h6>
-                                <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                <p class="text-muted card-text">Cloud technologie</p>
                             </div>
                         </div>
                     </div>
@@ -66,7 +66,7 @@
                         <div class="card border-0"><a href="Seminars/facebook&amp;ik.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/facebook%20en%20ik.jpg" alt="Card Image"></a>
                             <div class="card-body">
                                 <h6><a href="Seminars/facebook&amp;ik.html">Facebook en ik<br></a></h6>
-                                <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                <p class="text-muted card-text">De inpact van sociale medio op de samenleving</p>
                             </div>
                         </div>
                     </div>
@@ -74,12 +74,12 @@
                         <div class="card border-0"><a href="Seminars/quality@speed.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/Preformance%20testing.png" alt="Card Image"></a>
                             <div class="card-body">
                                 <h6><a href="Seminars/quality@speed.html">Quality@Speed<br></a></h6>
-                                <p class="text-muted card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.</p>
+                                <p class="text-muted card-text">Preformance testing van web applicaties</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <div class="card border-0"><a href="Seminars/secwise.html"><img class="card-img-top scale-on-hover" src="assets/img/Cloud_Security_495781054-700.jpg" alt="Card Image"></a>
+                        <div class="card border-0"><a href="Seminars/secwise.html"><img class="card-img-top scale-on-hover" src="assets/img/seminars/Cloud_Security_495781054-700.jpg" alt="Card Image"></a>
                             <div class="card-body">
                                 <h6><a href="Seminars/secwise.html">Secwise<br></a></h6>
                                 <p class="text-muted card-text">Cloud Security<br></p>
