added content to 5G seminar

--- a/Seminars/5g.html
+++ b/Seminars/5g.html
@@ -62,10 +62,13 @@
                         <h1 class="text-left">Ericson 5G</h1>
                         <div style="border-radius: 5px;background-color: rgba(234,234,234,0.3);padding: 10px;">
                             <div>
-                                <p class="text-justify">Paragraph</p>
+                                <p class="text-justify">Dit seminarie ging over de evolutie van het telefoon netwerk.&nbsp; Het verhaal begon bij het onstaan van telefonie en de fiziek bemande telefoon centrales om mensen door te verbinden.</p>
                             </div>
                             <div>
-                                <p class="text-justify">Paragraph</p>
+                                <p class="text-justify">Hierna begon het opbouwende verhaal van G tot 5G. Zo werd er gesproken over regio gebonden gsm nummers. Waarbij je moest weten op welke regio de gsm verbonden was om je contact te kunnen contacteren.</p>
+                            </div>
+                            <div>
+                                <p class="text-justify">Alle iteratie fases van de mobiele technologien werden overlopen en besproken waarom bepaalde uitbreidingen nodig waren.</p>
                             </div>
                         </div>
                     </div>
