cleanup and add cloud gluo seminar

--- a/Seminars/cloud.html
+++ b/Seminars/cloud.html
@@ -26,8 +26,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
-        <div class="container"><a class="navbar-brand logo" href="../index.html">Casper Naudts</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+<nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
+    <div class="container"><a class="navbar-brand logo" href="../index.html">Casper Naudts</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div
                 class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
@@ -39,11 +39,50 @@
         </div>
         </div>
     </nav>
-    <main style="padding: 88px 0px 0px;">
-        <section style="padding: 100px 0px;"></section>
+	<main>
+      <div class="header-dark" style="background-image: url(/assets/img/seminars/public-cloud-providers.jpg);">
+        <nav class="navbar navbar-dark navbar-expand-lg navigation-clean-search">
+          <div class="container"><a class="navbar-brand" href="#">Company Name</a>
+            <button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse"
+                        id="navcol-1">
+              <ul class="nav navbar-nav">
+                <li class="nav-item" role="presentation"><a class="nav-link" href="#">Link</a></li>
+                <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Dropdown </a>
+                  <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">First Item</a><a class="dropdown-item" role="presentation" href="#">Second Item</a><a class="dropdown-item" role="presentation" href="#">Third Item</a></div>
+                </li>
+              </ul>
+              <form class="form-inline mr-auto" target="_self">
+                <div class="form-group">
+                  <label for="search-field"><i class="fa fa-search"></i></label>
+                  <input class="form-control search-field" type="search" id="search-field" name="search">
+                </div>
+              </form>
+              <span class="navbar-text"><a class="login" href="#">Log In</a></span><a class="btn btn-light action-button" role="button" href="#">Sign Up</a></div>
+          </div>
+        </nav>
+        <div class="container hero">
+          <div class="row">
+            <div class="col-md-8 offset-md-2">
+              <h1 class="text-left">Glue cloud introduction</h1>
+              <div style="border-radius: 5px; background-color: rgba(255,255,255,0.48); padding: 10px;">
+                <div>
+                  <p class="text-justify">Dit was mijn eerste seminarie en het was er in een keer boenk op.&nbsp; We mochten met de hulp van de mensen van Gluo op AWS een hoop services opzetten.</p>
+                </div>
+                <div>
+                  <p class="text-justify">Zo gingen we van een website op een virtuele mashine draaien naar een hele cluster van webservers met loadbalancers en alles er op en er aan.</p>
+                </div>
+                <div>
+                  <p class="text-justify">Het leuke aan dir seminarie vond ik dat het voorliep op de lesse. Op het moment van dit seminarie was AWS nog een grote onbekende doos waardoor alle info meer dan welkom was. Moest ik dit seminarie nu volgen zou al de magie weg zijn.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer class="d-md-flex page-footer">
-        <div class="container">
+<footer class="d-md-flex page-footer">
+    <div class="container">
             <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
             <div class="social-icons"><a href="https://www.linkedin.com/in/casper-naudts-25a747148/"><i class="icon ion-social-linkedin"></i></a></div>
         </div>
