--- a/Seminars/facebook&ik.html
+++ b/Seminars/facebook&ik.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <div>
-        <div class="header-dark" style="background-image: url(&quot;../assets/img/seminars/158292227683309219.jpg&quot;);filter: blur(0px);">
+        <div class="header-dark" style="background-image: url(/assets/img/seminars/158292227683309219.jpg);filter: blur(0px);">
             <nav class="navbar navbar-dark navbar-expand-lg navigation-clean-search">
                 <div class="container"><a class="navbar-brand" href="#">Company Name</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse"
