--- a/cv.html
+++ b/cv.html
@@ -42,7 +42,7 @@
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom">
             <div class="container">
-                <div class="avatar" style="background-image: url(&quot;assets/img/avatars/Layer%2021.png&quot;);"></div>
+                <div class="avatar" style="background-image: url('/assets/img/avatars/Layer 21.png');"></div>
                 <div class="about-me">
                     <p>Geëngageerde mede-oprichter van edu-tech met een bewezen kennis van werken in de computernetwerk industrie. Bekwaam in het spreken in het openbaar, virtualisatie, Cloud, Office 365 en team management.<br><br>Wat ik leuk vind aan de
                         combinatie van studeren en runnen van een bedrijf is dat er een zeer kleine tijdspanne is tussen het leren van technologie en het toepassen ervan in de echte wereld. Dat maakt het gemakkelijker om het nut te zien van wat er op
