--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <main class="page lanidng-page">
         <section class="portfolio-block block-intro">
             <div class="container">
-                <div class="avatar" style="background-image: url(&quot;assets/img/avatars/Layer%2021.png&quot;);"></div>
+                <div class="avatar" style="background-image: url('/assets/img/avatars/Layer 21.png');"></div>
                 <div class="about-me">
                     <p>Hoi! Ik ben <strong>Casper Naudts</strong>. Ik ben een student toegepaste informatica &nbsp;aan Hogeschool PXL en heb een enorme passie voor nieuwe en inovatieve technologieën.</p>
                 </div>
@@ -104,7 +104,7 @@
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup">
                         <div class="screen">
-                            <div class="screen-content" style="background-image:url(&quot;assets/img/tech/image6.png&quot;);"></div>
+                            <div class="screen-content" style="background-image:url(/assets/img/tech/image6.png);"></div>
                         </div>
                         <div class="keyboard"></div>
                     </div>
