--- a/Seminars/5g.html
+++ b/Seminars/5g.html
@@ -31,16 +31,16 @@
             <div
                 class="collapse navbar-collapse" id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="Seminars.html">Seminaries</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="Seminars.html">Extra's</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cv.html">CV</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../Seminars.html">Seminaries</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../Seminars.html">Extra's</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../cv.html">CV</a></li>
                 </ul>
         </div>
         </div>
     </nav>
-    <div>
-        <div class="header-dark" style="background-image: url(&quot;../assets/img/Fotoram.io.jpg&quot;);">
+    <main>
+        <div class="header-dark" style="background-image: url(/assets/img/Fotoram.io.jpg);">
             <nav class="navbar navbar-dark navbar-expand-lg navigation-clean-search">
                 <div class="container"><a class="navbar-brand" href="#">Company Name</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse"
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <footer class="d-md-flex page-footer">
         <div class="container">
             <div class="links"><a href="#">About me</a><a href="#">Contact me</a><a href="#">Projects</a></div>
