--- a/Seminars/quality@speed.html
+++ b/Seminars/quality@speed.html
@@ -39,8 +39,8 @@
         </div>
         </div>
     </nav>
-    <main style="padding: 88px 0px 0px;">
-        <section style="padding: 100px 0px;"></section>
+    <main style="padding: 88px 0 0;">
+        <section style="padding: 100px 0;"></section>
     </main>
     <footer class="d-md-flex page-footer">
         <div class="container">
