--- a/project-page.html
+++ b/project-page.html
@@ -45,7 +45,7 @@
                 <div class="heading">
                     <h2>project name</h2>
                 </div>
-                <div class="image" style="background-image:url(&quot;assets/img/tech/image4.jpg&quot;);"></div>
+                <div class="image" style="background-image:url(/assets/img/tech/image4.jpg);"></div>
                 <div class="row">
                     <div class="col-12 col-md-6 offset-md-1 info">
                         <h3>Description</h3>
